--- a/TaskManager/src/app/app.component.html
+++ b/TaskManager/src/app/app.component.html
@@ -28,6 +28,9 @@
       <li class="nav-item" *ngIf="loginService.currentUserName == null">
         <a class="nav-link"  routerLink="login">Login</a>
       </li>
+      <li class="nav-item">
+       <a href="#" [innerHTML]="myProperty">Hello</a>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <div class="input-group">
